--- a/Discovery/Assembly-CSharp.csproj
+++ b/Discovery/Assembly-CSharp.csproj
@@ -56,7 +56,7 @@
      <Compile Include="Assets\Scenes\Prototype\Player\Scripts\Entity\Components\Interaction\Interactors\PlayerInteractor.cs" />
      <Compile Include="Assets\Scenes\Prototype\Player\Scripts\Entity\Components\Player\HeadBob.cs" />
      <Compile Include="Assets\Scenes\Prototype\Player\Scripts\Entity\Components\Player\PlayerController.cs" />
-     <Compile Include="Assets\Scenes\Prototype\Player\Scripts\Entity\Components\Ship.cs" />
+     <Compile Include="Assets\Scenes\Prototype\Player\Scripts\Entity\Components\ShipController.cs" />
      <Compile Include="Assets\Scenes\Prototype\Player\Scripts\Entity\Components\ShipStats.cs" />
      <None Include="Assets\Standard Assets\Effects\GlassRefraction\Shaders\GlassStainedBumpDistort.shader" />
      <None Include="Assets\Standard Assets\Effects\ImageEffects\Shaders\_BloomAndFlares\BlendOneOne.shader" />
